[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Menu/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Heart.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Crystal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://textures/Enemy.tres" type="Texture" id=7]
[ext_resource path="res://music/title.ogg" type="AudioStream" id=8]
[ext_resource path="res://Menu/new_dynamicfont.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "game_won"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasModulate:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear_level"
} ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HUD/MarginContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Game" type="Node"]
script = ExtResource( 2 )
first_level = ExtResource( 1 )

[node name="CurrentLevel" type="Node" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -300.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 280 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="HealthBar" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 254.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = -1

[node name="Heart" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer/HealthBar" instance=ExtResource( 4 )]
margin_right = 16.0
margin_bottom = 16.0
rect_scale = Vector2( 1, 1 )

[node name="CrystalBar" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 16.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = -1
alignment = 2

[node name="Crystal" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer/CrystalBar" instance=ExtResource( 5 )]
margin_left = 238.0
margin_right = 254.0
margin_bottom = 16.0
rect_scale = Vector2( 1, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 284.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 432.0
margin_top = 2.0
margin_right = 492.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "10/10"
align = 2

[node name="TextureRect" type="TextureRect" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 496.0
margin_right = 512.0
margin_bottom = 16.0
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="MainMenu" parent="." instance=ExtResource( 3 )]
pause_mode = 2
title_music = ExtResource( 8 )

[node name="WinScreen" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinScreen"]
margin_left = 360.0
margin_top = 292.0
margin_right = 664.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 9 )
text = "Thanks for playing!"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_won = SubResource( 2 )
[connection signal="start" from="MainMenu" to="." method="_on_MainMenu_start"]
[connection signal="stop" from="MainMenu" to="." method="_on_MainMenu_stop"]
